# breda-app-template

./: .breda-template  Cargo.toml  README.md  breda.yaml  rust-toolchain.toml
android/: Cargo.toml  manifest.yaml
android/src/: lib.rs
crates/bonk-interop/: Cargo.toml
crates/bonk-interop/src/: lib.rs
crates/{{ template_id }}/: AppStoreInfo_macOS.plist  Cargo.toml  README.md  breda.yaml  build.rs  manifest.yaml
crates/{{ template_id }}-android/: Cargo.toml  manifest.yaml
crates/{{ template_id }}-android/src/: lib.rs
crates/{{ template_id }}/src/: entry.rs  lib.rs  main.rs
src/: lib.rs  main.rs
