[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "{{ template_name }}-android"
version.workspace = true

[lib]
# Compile a dynamic "C" library that is called by Android's NativeActivity.
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
{{ template_id }} = { path = ".." }

[features]
pre_cooked_assets = ["{{ template_id }}/pre_cooked_assets"]
