[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "{{ template_id }}-android"
version.workspace = true

[lib]
# Compile a dynamic "C" library that is called by Android's NativeActivity.
crate-type = ["cdylib"]

[dependencies]
{{ template_id }}.workspace = true
android-activity.workspace = true

[build-dependencies]
