[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "{{ template_id }}"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
breda = { workspace = true, default-features = false, features = ["runtime_only_current_platform"] }
breda-app-support.workspace = true

adlx = { version = "0.0.0-alpha.1" }
named-lock = { git = "https://github.com/Traverse-Research/named-lock.git", rev = "821737c", default-features = false }
nvapi-sys = { git = "https://github.com/Traverse-Research/nvapi-rs.git", rev = "ec3c62e", default-features = false, features = [
    "serde",
] }
egui_commonmark = { version = "0.16", default-features = false, features = [
    "macros",
    "pulldown_cmark",
] }
tokio = { version = "1.32.0", default-features = true, features = ["net", "rt-multi-thread", "sync", "time"], optional = true }
discord-sdk = { version = "0.3.8", optional = true }
directories = { version = "6.0.0" }
sha2 = { version = "0.10.8" }
qrcode = { version = "0.14", default-features = false }
rust-i18n = { version = "3.1.5", default-features = false }
sanitize-filename = { version = "0.4.0", default-features = false }
tracing = { version = "0.1", default-features = false }
wry = { version = "0.51" }

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
csv.workspace = true
dolly.workspace = true
egui-phosphor.workspace = true
egui_extras.workspace = true
enum-map.workspace = true
glam.workspace = true
image.workspace = true
log.workspace = true
log-once.workspace = true
mirror-mirror.workspace = true
parking_lot.workspace = true
puffin_egui.workspace = true
rand_core.workspace = true
rand_pcg.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
ureq.workspace = true
urlencoding.workspace = true
webbrowser.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android-activity.workspace = true
android-intent = { git = "https://github.com/Traverse-Research/android-intent", rev = "41bcbbb", default-features = false }
jni = { version = "0.21.1", default-features = false }
shlex = { version = "1", default-features = false }

[target.'cfg(any(all(target_os = "windows", target_arch = "x86_64"), target_os = "linux", target_os = "darwin"))'.dependencies]
steamworks = { version = "0.11.0", default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
rpmalloc = { version = "0.2.2", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
] }
pelite = { version = "0.10.0", default-features = false, features = ["mmap"] }

[target.'cfg(not(any(target_os = "windows", target_os = "android")))'.dependencies]
native-dialog = { git = "https://github.com/Traverse-Research/native-dialog-rs.git", rev = "56bca7a" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", default-features = false } # Matches webkit2gtk

[build-dependencies]
breda-build.workspace = true
cfg_aliases.workspace = true

[features]
default = ["development"]

development = [
    "breda/development",
    # Add the highest tier feature that has all functionality, so that devs always have access to everything.
    "professional",
]

retail = [
    "breda/retail",
    "pre_cooked_assets",
    "discord",
]

# Free ownership.
#
# Should not be used in `cfg` guards, use `Ownership` instead.
free = []

# Advanced ownership.
#
# Should not be used in `cfg` guards, use `Ownership` instead.
advanced = []

# Professional ownership.
#
# Should not be used in `cfg` guards, use `Ownership` instead.
professional = []

# Run kiosk mode.
kiosk_mode = []

native_certs = ["breda/native-certs", "ureq/native-certs"]

pre_cooked_assets = ["breda/pre_cooked_assets"]
discord = ["dep:tokio", "dep:discord-sdk"]
